--- a/assets/bibliography/2024-05-07-alibi-mlm.bib
+++ b/assets/bibliography/2024-05-07-alibi-mlm.bib
@@ -4,7 +4,7 @@
                   Mike Lewis},
   title        = {Train Short, Test Long: Attention with Linear Biases Enables Input
                   Length Extrapolation},
-  booktitle    = {The Tenth International Conference on Learning Representations, {ICLR}
+  booktitle    = {The Tenth International Conference on Learning Representations, ICLR
                   2022, Virtual Event, April 25-29, 2022},
   publisher    = {OpenReview.net},
   year         = {2022},
@@ -26,7 +26,7 @@
                   Understanding},
   booktitle    = {Proceedings of the 2019 Conference of the North American Chapter of
                   the Association for Computational Linguistics: Human Language Technologies,
-                  {NAACL-HLT} 2019, Minneapolis, MN, USA, June 2-7, 2019, Volume 1 (Long
+                  NAACL-HLT 2019, Minneapolis, MN, USA, June 2-7, 2019, Volume 1 (Long
                   and Short Papers)},
   pages        = {4171--4186},
   publisher    = {Association for Computational Linguistics},
