Update abstract and add author + affiliations

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -2,14 +2,16 @@
 layout: distill
 title: "Bridging the Data Processing Inequality and Function-Space Variational Inference"
 description: >-
-  This blog post explores the interplay between the <i>Data Processing Inequality (DPI)</i> and <i>Function-Space Variational Inference (FSVI)</i> within Bayesian deep learning and information theory. After examining the DPI, a cornerstone concept in information theory, and its pivotal role in governing the transformation and flow of information through stochastic processes, we employ its unique connection to FSVI to highlight the FSVI's focus on Bayesian predictive posteriors over parameter space. Throughout the post, theoretical concepts are intertwined with intuitive explanations and mathematical rigor, offering a holistic understanding of these complex topics. The post culminates by synthesizing insights into the significance of predictive priors in model training and regularization, shedding light on their practical implications in areas like continual learning and knowledge distillation. This comprehensive examination not only enriches theoretical understanding but also highlights practical applications in machine learning, making it a valuable read for researchers and practitioners.
+  This blog post explores the interplay between the <i>Data Processing Inequality (DPI)</i>, a cornerstone concept in information theory, and <i>Function-Space Variational Inference (FSVI)</i> within the context of Bayesian deep learning. The DPI governs the transformation and flow of information through stochastic processes, and its unique connection to FSVI is employed to highlight FSVI's focus on Bayesian predictive posteriors over parameter space. Throughout the post, theoretical concepts are intertwined with intuitive explanations and mathematical rigor, offering a comprehensive understanding of these complex topics. The post concludes by bringing together various ideas to explain why the choice of predictive priors (initial probability distributions assumed for model predictions before training) is important for training machine learning models and preventing overfitting. It also discusses the practical implications of these concepts in areas such as continual learning and knowledge distillation. By examining these concepts in depth, the post provides valuable insights for both theory and practice in machine learning, making it an informative resource for researchers and practitioners.
 date: 2024-05-07
 future: true
 htmlwidgets: true
 
-# Anonymize when submitting
 authors:
-  - name: Anonymous
+  - name: Andreas Kirsch
+    url: "https://www.blackhc.net"
+    affiliations:
+      name: University of Oxford (Former Affiliation)
 
 # authors:
 #   - name: Albert Einstein
