--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -235,18 +235,13 @@ $$
 
 ## Introduction
 
-In information theory, the **data processing inequality (DPI)** expresses a fundamental idea: processing data stochastically cannot increase information. The DPI examines how information flows and transforms through stochastic processes, governing what reductions or bottlenecks may emerge.  
+In information theory, the **data processing inequality (DPI)** expresses a fundamental idea: processing data (stochastically) cannot increase information. The DPI provides us with a powerful intuition about what information processing systems can do and what the limitations of data processing are.
 
-In this blog post, we will first study the DPI, developing intuition through vivid examples and detailed proofs---especially the equality case, which is arguably the best way to understand inequalities. We will consider classic forms of the DPI as well as DPIs relating probability distributions more broadly.
+In this blog post, we first study the DPI, developing intuition through vivid examples and detailed proofs---especially the equality case, which is arguably the best way to understand inequalities. We will consider classic forms of the DPI as well as DPIs relating probability distributions more broadly. 
+Then, we explore the intriguing connection between DPI and **function-space variational inference (FSVI)**, a modern Bayesian deep learning technique that focuses on the Bayesian predictive posterior rather than the parameter space. Exploring this connection is important because it can provide new insights into FSVI on a fundamental level. We apply the DPI to recover several interesting results from the literature in a simple form and build intuitions for the relationship between parameter and functional priors. 
 
-Then, we explore the intriguing connection between DPI and **function-space variational inference (FSVI)**, a modern Bayesian deep learning technique that focuses on the Bayesian predictive posterior rather than the parameter space.
-We apply the DPI to recover several interesting results from the literature in a simple form and build intuitions for the relationship between parameter and functional priors. 
-
-Most importantly, we consider how FSVI can measure a **predictive** divergence between the approximate and true posterior which is independent of parameter symmetries. 
-With parameter symmetries, I refer to different parameters that yield the same predictions, which is very common in over-parameterized neural networks:
-think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions<d-footnote>Thanks to ChatGPT for this analogy! 🤗</d-footnote>.
-
-As a nice example and application, we relate FSVI to training with knowledge distillation and label entropy regularization: potentially more meaningful priors than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used because of its simplicity. Indeed, there are better alternatives, see Fortuin et al (2022)<d-cite key="fortuin2022bayesian"></d-cite> and Fortuin (2022)<d-cite key="fortuin2022priors"></d-cite>.</d-footnote>.
+Most importantly, we consider how FSVI can measure a *predictive* divergence between the approximate and true posterior which is independent of parameter symmetries. (With parameter symmetries, I refer to different parameters that yield the same predictions, which is very common in over-parameterized neural networks: think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions<d-footnote>Thanks to ChatGPT for this analogy! 🤗</d-footnote>.) Explaining this connection is one of the main goals of this article and will help you understand the relationships between DPI, FSVI, and other deep learning methods. 
+As a concrete example and application, we relate FSVI to training with knowledge distillation and label entropy regularization: potentially more meaningful priors than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used because of its simplicity. Indeed, there are better alternatives, see Fortuin et al (2022)<d-cite key="fortuin2022bayesian"></d-cite> and Fortuin (2022)<d-cite key="fortuin2022priors"></d-cite>.</d-footnote>. This connection highlights the practical relevance of the theoretical concepts discussed in this post and will hopefully inspire the reader to view Bayesian deep learning from a new point of view.
 
 ### TL;DR
 
