--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -131,10 +131,13 @@ _styles: >
     background-color: #006600;
     border-left-color: #2bc039;
   }
+  html[data-theme='dark'] d-article blockquote {
+    color: var(--global-text-color) !important;
+  }
   d-article aside * {
     color: var(--global-text-color) !important;
   }
-  d-article article p {
+  d-article p {
     text-align: justify;
     text-justify: inter-word;
     -ms-hyphens: auto;
@@ -249,18 +252,17 @@ The following sections summarize the key takeaways of this blog post. If they do
 
 #### Data Processing Inequality
 
-The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will look at different data processing inequalities that relate different distributions instead of different random variables. However, the blog posts in particular looks at the DPI when formulated using Kullback-Leibler (KL/🥬) divergences between distributions.
+The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will look at different data processing inequalities that relate different distributions instead of different random variables. However, the blog posts in particular looks at the DPI when formulated using Kullback-Leibler (KL) divergences between distributions. I will use "🥬 divergence" in headings to add a bit of color. 😊
 
-Concretely, this DPI states that processing data stochastically can only reduce information. More formally:
+Concretely, this KL DPI states that processing data stochastically can only reduce information. More formally:
 
 <aside class="l-body box-note" markdown="1">
-Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$. Then the DPI states:
+Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$---that is, we could imagine having a noise random variable $$\boldsymbol{Z}$$ as a hidden input to $$\fof{\W}$$, i.e. $$\fof{\W;\boldsymbol{Z}}$$. Then the DPI states:
 
 $$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
-
 </aside>
 
-That is, the KL divergence (*🥬 divergence*) between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$.
+That is, the KL divergence between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than the one between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$.
 
 The paper "*Understanding Variational Inference in Function-Space*" by Burt et al. (2021)<d-cite key="burt2021understanding"></d-cite> succinctly summarizes the DPI as follows:
 
@@ -274,8 +276,7 @@ Generally, *variational inference* is a powerful technique for approximating com
 
 However, especially for deep neural networks, obtaining a good approximation of the parameter space can be difficult. One reason is the sheer size of the parameter space. Additionally, the parameterization of a neural network often contains many symmetries---different parameter configurations can lead to the same predictions of the model---that are not taken into account either. 
 
-**Function-space variational inference (FSVI)** side-steps some of these restrictions by only requiring that the variational distribution matches the *Bayesian **predictive** posterior*.
-
+Here, **Function-space variational inference (FSVI)** side-steps some of these restrictions by only requiring that the variational distribution matches the *Bayesian **predictive** posterior*:
 Whereas regular variational inference regularizes towards a parameter prior, FSVI regularizes towards a data prior. This is especially useful when the parameter prior is not very meaningful, e.g. an isotropic Gaussian prior, which is often used in Bayesian neural networks.
 
 <aside class="l-body box-note" markdown="1">
@@ -286,15 +287,14 @@ $$
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}},
 \end{align}
 $$
-
-(unlike in regular variational inference, where we regularize towards a parameter prior: $$\Kale{\qof{\W}}{\pof{\W}}$$.)
+unlike in regular variational inference, where we regularize towards a parameter prior: $$\Kale{\qof{\W}}{\pof{\W}}$$.
 </aside>
 
 ## Background: Information-Theoretic Notation
 
-Information theory deals with the communication of information. In this blog post, we use information-theoretic notation to express various quantities related to probability distributions and their relationships. Here are some key concepts we will use:
+Information theory deals with the communication of information. In this blog post, we use a unified information-theoretic notation to express various quantities related to probability distributions and their relationships<d-footnote>It largely follows "<a href="https://arxiv.org/abs/2106.12062">A Practical & Unified Notation for Information-Theoretic Quantities in ML</a>".</d-footnote>. Here are some key concepts we will use:
 
-The **information content** of an event $$x$$ is denoted as $$\Hof{x}$$ and is defined as $$-\log \pof{x}$$. It represents the amount of information needed to describe the occurrence of $$x$$ given an underlying probability distribution.
+The **information content** of an event $$x$$ is denoted as $$\Hof{x}$$ and is defined as $$-\log \pof{x}$$. It represents the minimum amount of information needed to describe the occurrence of $$x$$ given an underlying probability distribution.
 In machine learning, this information content is often used as a minimization objective, represented as the negative log-likelihood or cross-entropy when averaged over a dataset.
 
 The **entropy** $$\Hof{X}$$ of a random variable $$X$$ is the expectation of its information content:
@@ -305,7 +305,7 @@ $$
 
 The entropy measures the average amount of information needed to describe the random variable $$X$$. It provides a measure of uncertainty or randomness associated with $$X$$.
 
-We will also use the **Kullback-Leibler divergence** (🥬) $$\Kale{\pof{X}}{\qof{X}}$$ and the **cross-entropy** $$\CrossEntropy{\pof{X}}{\qof{X}}$$:
+We will also use the **Kullback-Leibler divergence** $$\Kale{\pof{X}}{\qof{X}}$$ and the **cross-entropy** $$\CrossEntropy{\pof{X}}{\qof{X}}$$:
 
 $$
 \begin{align}
@@ -316,7 +316,7 @@ $$
 
 The cross-entropy quantifies the average number of bits needed to encode samples drawn from the true distribution $$\pof{X}$$ using a different distribution $$\qof{X}$$. The Kullback-Leibler divergence is a measure of the difference between two probability distributions and captures the additional bits needed to encode samples from $$\pof{X}$$ compared to encoding them using the true distribution $$\qof{X}$$.
 
-Now that we have refreshed our notation, let's delve into the data processing inequality.
+Now that we have covered the notation, let's delve into the data processing inequality.
 
 ## Data Processing Inequality
 
