DPI proof edits

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -134,6 +134,9 @@ _styles: >
   html[data-theme='dark'] d-article blockquote {
     color: var(--global-text-color) !important;
   }
+  html[data-theme='dark'] d-article summary {
+    color: var(--global-text-color) !important;
+  }
   d-article aside * {
     color: var(--global-text-color) !important;
   }
@@ -283,16 +286,16 @@ Whereas regular variational inference regularizes towards a parameter prior, FSV
 In function-space variational inference, we regularize towards a data prior:
 
 $$
-\begin{align}
+\begin{align*}
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}},
-\end{align}
+\end{align*}
 $$
 unlike in regular variational inference, where we regularize towards a parameter prior: $$\Kale{\qof{\W}}{\pof{\W}}$$.
 </aside>
 
 ## Background: Information-Theoretic Notation
 
-Information theory deals with the communication of information. In this blog post, we use a unified information-theoretic notation to express various quantities related to probability distributions and their relationships<d-footnote>It largely follows "<a href="https://arxiv.org/abs/2106.12062">A Practical & Unified Notation for Information-Theoretic Quantities in ML</a>".</d-footnote>. Here are some key concepts we will use:
+Information theory deals with the communication of information<d-footnote>See the excellent <a href="https://colah.github.io/posts/2015-09-Visual-Information/">"Visual Information Theory"</a> by Chris Olah for a visual introduction to information theory.</d-footnote>. In this blog post, we use a unified information-theoretic notation to express various quantities related to probability distributions and their relationships<d-footnote>It largely follows "<a href="https://arxiv.org/abs/2106.12062">A Practical & Unified Notation for Information-Theoretic Quantities in ML</a>".</d-footnote>. Here are some key concepts we will use:
 
 The **information content** of an event $$x$$ is denoted as $$\Hof{x}$$ and is defined as $$-\log \pof{x}$$. It represents the minimum amount of information needed to describe the occurrence of $$x$$ given an underlying probability distribution.
 In machine learning, this information content is often used as a minimization objective, represented as the negative log-likelihood or cross-entropy when averaged over a dataset.
@@ -303,15 +306,25 @@ $$
 \Hof{X} \triangleq \E{\pof{x}}{\Hof{x}} = \E{\pof{x}}{-\log \pof{x}}.
 $$
 
-The entropy measures the average amount of information needed to describe the random variable $$X$$. It provides a measure of uncertainty or randomness associated with $$X$$.
+The entropy measures the average amount of information needed to describe the random variable $$X$$. It provides a measure of uncertainty or randomness associated with $$X$$. We can similarly define the entropy of a conditional distribution $$\Hof{X \given Y}$$ and the joint entropy $$\Hof{X, Y}$$.
+
+The **mutual information** $$\MIof{X;Y}$$ between two random variables $$X$$ and $$Y$$ is a measure of the amount of information that one random variable contains about the other. It is defined as:
+
+$$
+\begin{align*}
+\MIof{X;Y} & \triangleq \Hof{X} - \Hof{X \given Y} \\
+&= \Hof{Y} - \Hof{Y \given X} \\
+&= \Hof{X} + \Hof{Y} - \Hof{X, Y}.
+\end{align*}
+$$
 
 We will also use the **Kullback-Leibler divergence** $$\Kale{\pof{X}}{\qof{X}}$$ and the **cross-entropy** $$\CrossEntropy{\pof{X}}{\qof{X}}$$:
 
 $$
-\begin{align}
+\begin{align*}
 \CrossEntropy{\pof{X}}{\qof{X}} & = \E{\pof{x}}{-\log \qof{x}}\\
 \Kale{\pof{X}}{\qof{X}} & = \CrossEntropy{\pof{X}}{\qof{X}} - \Hof{X}
-\end{align}
+\end{align*}
 $$
 
 The cross-entropy quantifies the average number of bits needed to encode samples drawn from the true distribution $$\pof{X}$$ using a different distribution $$\qof{X}$$. The Kullback-Leibler divergence is a measure of the difference between two probability distributions and captures the additional bits needed to encode samples from $$\pof{X}$$ compared to encoding them using the true distribution $$\qof{X}$$.
@@ -326,10 +339,10 @@ $$
 \MIof{X;Y} \ge \MIof{X;Z}.
 $$
 
-We can view $$\rightarrow$$ as a processing or transition step, that maps $$X$$ to $$Y$$ and $$Y$$ to $$Z$$, whereas the mapping can be deterministic or stochastic. 
+We can view $$\rightarrow$$ as a processing or transition step that maps $$X$$ to $$Y$$ and $$Y$$ to $$Z$$, whereas the mapping can be deterministic or stochastic. 
 The inequality tells us that processing the random variable $$X$$ to obtain $$Y$$ and further processing $$Y$$ to obtain $$Z$$ cannot increase the mutual information between $$X$$ and $$Z$$ compared to the mutual information between $$X$$ and $$Y$$.
 
-The following three scenarios illustrate the data processing inequality using different mappings.
+The following three scenarios illustrate the data processing inequality using different mappings:
 
 ### Example: Image Processing Pipeline
 
@@ -381,7 +394,7 @@ Intuitively, autoencoders try to preserve as much mutual information between inp
 
 The proof is simple and connects the DPI to another important inequality.
 
-First we note that the Markov Chain implies that the following factorization of the joint distribution:
+First we note that the Markov Chain implies the following factorization of the joint distribution:
 
 $$
 \pof{x, y, z} = \pof{x} \pof{y \given x} \pof{z \given y}.
@@ -410,7 +423,7 @@ $$
 The equality gap $$\Hof{X \given Y, Z} - \Hof{X \given Z}$$ corresponds to the mutual information $$\MIof{X ; Y \given Z}$$. This mutual information measures the extra information about $$X$$ contained in $$Y$$ that is not already conveyed by $$Z$$. It is zero if and only if $$X \rightarrow Z \rightarrow Y$$ forms a Markov chain, indicating that $$Z$$ is a sufficient statistic for $$X$$.
 
 <details markdown="1">
-<summary>Proof of **(2)** "Conditioning Reduces Entropy":</summary>
+<summary>Proof of <i>(2)</i> "Conditioning Reduces Entropy":</summary>
 We can easily show that conditioning reduces entropy by using the non-negative property of the mutual information:
 
 $$
@@ -423,14 +436,15 @@ $$
 $$
 </details>
 
-The fact that conditioning reduces entropy, $$\Hof{X} \ge \Hof{X \given Y}$$ is a very important property by itself and can be seen as another form of the data processing inequality. $$\Hof{X \given Y}$$ tells us how much uncertainty is left after knowing $$Y$$. For example, if the mapping from $$X$$ to $$Y$$ is injective ("1:1"), then $$Y$$ contains everything about $$X$$. Vice-versa, worst-case, if $$Y$$ is independent of $$X$$, $$\Hof{X} = \Hof{X \given Y}$$. Intuitively, this says that processing $$X$$ can only ("at best") reduce the uncertainty about $$X$$ and not increase it.
+The fact that conditioning reduces entropy, $$\Hof{X} \ge \Hof{X \given Y}$$, is an important property by itself and is reminiscent of the data processing inequality. 
+The conditional entropy $$\Hof{X \given Y}$$ quantifies the remaining uncertainty about $$X$$ after observing $$Y$$. If $$X$$ and $$Y$$ are independent, then $$\Hof{X} = \Hof{X \given Y}$$, as knowing $$Y$$ does not provide any information about $$X$$. On the other hand, if $$Y$$ completely determines $$X$$, then $$\Hof{X \given Y} = 0$$, as there is no remaining uncertainty about $$X$$ once $$Y$$ is known. In general, conditioning can only reduce the uncertainty about $$X$$, but it does not necessarily reduce it to zero.
 
-Let's move on and consider the 🥬 data processing inequality.
+Let's move on and consider the KL data processing inequality.
 
 ## 🥬 Data Processing Inequality
 
-A similar DPI can be expressed for different distributions $$\pof{x}$$ and $$\qof{x}$$ and the KL divergence (🥬) between them.
-It states that if we evolve two distributions using the same transition function, they cannot become less similar. The KL divergence (🥬) is sometimes also referred to as "relative entropy", so we could also  call this the "*relative data processing inequality*".
+A similar DPI can be expressed for different distributions $$\pof{x}$$ and $$\qof{x}$$ and the KL divergence between them.
+It states that if we evolve two distributions using the same transition function, they cannot become less similar. The KL divergence is sometimes also referred to as "relative entropy", so we could also call this the "*relative data processing inequality*". 
 
 This can be formalized for distributions $$\pof{x}$$ and $$\qof{x}$$ and a stochastic transition function $$X \overset{\fof{y \given x}}{\longrightarrow} Y$$:
 
